# mem-d

./: .gitignore  AGENTS.md  README.md  pyproject.toml
datasets/: memories.json  realistic_memory_store.json
docs/: ACTION-PLANNING.md  ARCHITECTURE.md  DATA_CONTRACTS.md  DECISIONS.md  FUTURE-IMPLEMENTATIONS.md  INSIGHTS.md  POLICY-ENGINE.md  PRD.md  PRIORITY.md  PROJECT_RULES.md  REFERENCE_ROUTING.md  RESEARCH.md  SKILL.md  SUB-AGENTS.md  TASKS.md  TRD.md  VISUALS.md  WHY-MEM-D.md
examples/: memd_project_report_v0.3.0.json
memd/: __init__.py  __main__.py  actions.py  categorization.py  category_audit.py  category_consistency.py  cluster_audit.py  cluster_trust.py  clustering.py  contracts.py  dataset_quality.py  defaults.py  embeddings.py  evaluation.py  ids.py  insights.py  inspection.py  memory_evolution.py  memory_lifecycle.py  metrics.py  normalization.py  pipeline.py  policy.py  recommendations.py  reports.py  similarity.py  simulation.py  workflows.py
scripts/: benchmark_10k.py  preprocess_longmemeval.py  run_external_validation.py  run_longmemeval_benchmark.py  run_perma_benchmark.py  run_recommendation_evaluation.py  run_simulation_evaluation.py  run_workflow_evaluation.py
tests/: test_actions.py  test_benchmark_workflow.py  test_categorization.py  test_category_audit.py  test_category_consistency.py  test_cli.py  test_cluster_audit.py  test_cluster_trust.py  test_clustering_metrics.py  test_dataset_quality.py  test_evaluation.py  test_evolution_evaluation.py  test_insights.py  test_lifecycle_evaluation.py  test_memory_evolution.py  test_parser.py  (+12 more)
(+122 files in other folders)
