[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memd"
version = "0.7.0"
description = "Local-first CLI analysis for agent memory exports."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pydantic>=2",
    "rich>=13",
    "scikit-learn>=1.3",
    "typer>=0.12",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.6"]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
memd = "memd.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["memd"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
